# SecAgents

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build_payloads.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  secagents.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  secagents.yml
docs/: README.md
docs/wiki/: GitHub-Integration.md  Home.md  Installation.md  Operations.md  Usage.md  _Sidebar.md
src/secagents/: __main__.py  caching.py  config.py  docker_mgr.py  logging_system.py  paths.py  preflight.py  rate_limiting.py  sandbox.py  validation.py
src/secagents/agents/: __init__.py  orchestrator.py  prompts.py  specialist_prompts.py
src/secagents/cli/: main.py  ui.py
src/secagents/data/: Dockerfile.sandbox  __init__.py
src/secagents/data/payloads/: idor.txt  jwt.txt  lfi.txt  open_redirect.txt  prompt_injection.txt  sqli.txt  ssrf.txt  ssti.txt  xss.txt  xxe.txt
src/secagents/data/sandbox_helpers/: TOOLKIT.md
src/secagents/knowledge/: __init__.py  graph.py
src/secagents/llm/: __init__.py  consensus.py  cvss_scoring.py  error_handling.py  providers.py
src/secagents/reporting/: __init__.py  enhanced_report.py  report.py  sarif.py
src/secagents/targets/: __init__.py  acquire.py
tests/: __init__.py  test_config.py  test_knowledge_graph.py  test_package.py  test_specialist_agents.py
