[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secagents"
version = "0.1.1"
description = "Autonomous AI red-team CLI: sandboxed exploit validation, multi-provider LLM, CI/CD hooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SecAgents Contributors" }]
keywords = ["security", "llm", "docker", "cli", "red-team", "ci"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.2.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "gitpython>=3.1.43",
  "packaging>=24.0",
]

[project.optional-dependencies]
docker = ["docker>=7.1.0"]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/secagents"
Documentation = "https://github.com/YOUR_ORG/secagents/blob/main/docs/wiki/Home.md"
Repository = "https://github.com/YOUR_ORG/secagents"
Issues = "https://github.com/YOUR_ORG/secagents/issues"
Changelog = "https://github.com/YOUR_ORG/secagents/blob/main/CHANGELOG.md"

[project.scripts]
secagents = "secagents.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secagents = ["data/**/*", "py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
