[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secagents"
version = "0.1.1"
description = "Autonomous AI red-team CLI: sandboxed exploit validation, multi-provider LLM, CI/CD hooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SecAgents Contributors" }]
keywords = ["security", "llm", "docker", "cli", "red-team", "ci"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=15.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "groq>=0.4.0",
  "gitpython>=3.1.43",
  "packaging>=24.0",
]

[project.optional-dependencies]
docker = ["docker>=7.1.0"]
system = ["psutil>=5.9.0"]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/gl1tch0x1/SecAgents"
Documentation = "https://github.com/gl1tch0x1/SecAgents/blob/main/docs/wiki/Home.md"
Repository = "https://github.com/gl1tch0x1/SecAgents"
Issues = "https://github.com/gl1tch0x1/SecAgents/issues"
Changelog = "https://github.com/gl1tch0x1/SecAgents/blob/main/change_log.md"

[project.scripts]
secagents = "secagents.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secagents = ["data/**/*", "py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.pyrefly]
# Tell Pyrefly where the source root is so it can resolve `secagents.*` imports
project_includes = ["src"]
# Suppress errors in Pyrefly's own virtual in-memory fragments (hover/autocomplete)
ignore_missing_source = true
